After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778644 - Details in detailed event dialog can be different from the real details of the event
Details in detailed event dialog can be different from the real details of th...
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: User Interface
unspecified
Other Linux
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-15 02:49 UTC by Mohammed Sadiq
Modified: 2017-02-20 11:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: reset edit dialog's event on response (1.06 KB, patch)
2017-02-20 11:29 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Mohammed Sadiq 2017-02-15 02:49:19 UTC
The details displayed in Detailed event dialog on clicking some event can be different from the real detail of the event.

How to reproduce:
1. Create some event (in any view)
2. Click on the event (which shall show detailed event dialog)
3. Do some modifications
   Eg: change title, or add notes
4. Press 'Escape' key
5. Now click on the event again

Result:
The detailed event entry dialog displays the last modified data.

Expected Result:
Each time a new event entry dialog is shown, the data about the event should be refreshed.
Comment 1 Georges Basile Stavracas Neto 2017-02-20 11:29:41 UTC
Created attachment 346256 [details] [review]
window: reset edit dialog's event on response

Currently, we keep the to-be-edited event of the Edit
dialog when it sends any response. However, this can
cause issues since we can edit the event, press Esc and
see that the event didn't change but Edit dialog keeps
the changes.

Fix that by always resetting the edited event to NULL
after a response.
Comment 2 Georges Basile Stavracas Neto 2017-02-20 11:30:32 UTC
Attachment 346256 [details] pushed as aa9b83a - window: reset edit dialog's event on response